--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,37 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This application was made for use by Wunder market managers to assess driver applications and to either accept or reject them.
+
+Is possible to:
+* View a list of driver applications displaying the applicant's name, email address, city and application status
+* Filter a list of driver applications by either `status` or `city` or both
+	- In this feature, I didn't implement a case that not be passed parameters (city and status). I couldn't understand why the .blank? hadn't worked
+	- In this screen if you do more than one request, won't work. You need clear the URL. I don't know why the params in URL concat
+* Mark a driver application as `accepted` or `rejected`
+
+- For the development I used "rails generate scaffold" command
 
 Things you may want to cover:
 
-* Ruby version
+* Ruby version: 2.1.5
 
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
+* Database: SQLite version 3.8.5
 
 * Deployment instructions
+- Download the code
+- Run rake db:create
+- Run rails server
+- The application will be available in 	http://localhost:3000/cities
+										http://localhost:3000/users
+										http://localhost:3000/driver_applications
+										http://localhost:3000/search
+										
+/cities has a CRUD to City
+/users has a CRUD to User
+/driver_applications has a CRUD to Driver Application
+	- In this stage, is impossible to select "status"
+/search is a screen where you can search all the applications (is possible to filter) and is possbible to change status in "Change Status" link
+	- You can only change the status in this stage
 
-* ...
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
